--- a/examples/package.json
+++ b/examples/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx webpack serve --config webpack.config.js --port=9001",
     "dev": "npx webpack serve --config webpack.config.js"
   },
   "author": "",
@@ -18,5 +18,9 @@
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
