--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -1,13 +1,6 @@
 {
+  "extends": "./tsconfig.base",
   "compilerOptions": {
-    "noImplicitAny": false,
-    "module": "es6",
-    "target": "es5",
-    "jsx": "react",
-    "allowJs": true,
-    "moduleResolution": "node",
-    "baseUrl": ".",
-    "allowSyntheticDefaultImports": true,
     "paths": {
       "react": ["../dist/react/index.js"],
       "react-dom": ["../dist/react-dom/index.js"]
