--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
   "homepage": "https://github.com/TNT-Likely/pure-react#readme",
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-react": "^7.26.1",
     "rollup": "^2.58.0",
     "tslib": "^2.3.1",
     "typescript": "^4.4.4"
