feat: completeWork阶段更新文本节点、向hostComponent添加子节点

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,10 @@
     "forceConsistentCasingInFileNames": true,        /* Disallow inconsistently-cased references to the same file. */
     "noImplicitAny": false,
     "declaration": true,
-    "outDir": "dist/types"
+    "outDir": "dist/types",
+    "baseUrl": "./",
+    "paths": {
+      "shared": ["src/shared/*"]
+    }
   }
 }
